{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 17,
  "lineage": "ce1765ad-32f3-163d-1724-6d179175b1b0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "DAY2_YT_EIP_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-052af4ead68cd5530",
            "domain": "vpc",
            "id": "eipalloc-052af4ead68cd5530",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-35-154-92-59.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.92.59",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Day2_YT_PRIS_EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e670eb768a5fc3d4",
            "arn": "arn:aws:ec2:ap-south-1:549395784991:instance/i-0d2dc0152b3775f88",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d2dc0152b3775f88",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Project1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03a4e77de7f5f3fb0",
            "private_dns": "ip-10-0-0-239.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0687d421f77462391",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-013c8796ae060fd57",
            "tags": {
              "Name": "Day2_PRIS_EC2"
            },
            "tags_all": {
              "Name": "Day2_PRIS_EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06f4111c19b7aafc1"
            ]
          },
          "dependencies": [
            "aws_security_group.Day2_YT_SG_SSH_BH",
            "aws_subnet.Day2_YT_PRIS",
            "aws_vpc.Day2_YT_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Day2_YT_PUBS_Bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e670eb768a5fc3d4",
            "arn": "arn:aws:ec2:ap-south-1:549395784991:instance/i-02496ffe63dcd5815",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02496ffe63dcd5815",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Project1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bf2db9c8468d249e",
            "private_dns": "ip-10-0-0-29.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.29",
            "public_ip": "13.201.47.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07ae4685293d440a7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d6e7362aef7dc82f",
            "tags": {
              "Name": "Day2_PUBS_Bastion_host"
            },
            "tags_all": {
              "Name": "Day2_PUBS_Bastion_host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06f4111c19b7aafc1"
            ]
          },
          "dependencies": [
            "aws_security_group.Day2_YT_SG_SSH_BH",
            "aws_subnet.Day2_YT_PUBS",
            "aws_vpc.Day2_YT_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Day2_YT_IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:internet-gateway/igw-06e7bcf4a3b5a43df",
            "id": "igw-06e7bcf4a3b5a43df",
            "owner_id": "549395784991",
            "tags": {
              "Name": "Day2_IG"
            },
            "tags_all": {
              "Name": "Day2_IG"
            },
            "vpc_id": "vpc-0178061ce49ad9cb6"
          },
          "dependencies": [
            "aws_vpc.Day2_YT_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "DAY2_YT_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-052af4ead68cd5530",
            "association_id": "eipassoc-04663cb7b59d2e430",
            "connectivity_type": "public",
            "id": "nat-01060adb4851dad57",
            "network_interface_id": "eni-09f26ba5ccfd9208b",
            "private_ip": "10.0.0.98",
            "public_ip": "35.154.92.59",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d6e7362aef7dc82f"
          },
          "dependencies": [
            "aws_eip.DAY2_YT_EIP_NAT",
            "aws_subnet.Day2_YT_PUBS",
            "aws_vpc.Day2_YT_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "DAY2_YT_PISRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06e7bcf4a3b5a43df",
            "id": "r-rtb-081a2ab38927c51eb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-081a2ab38927c51eb",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Day2_YT_IG",
            "aws_route_table.Day2_YT_RT_NAT",
            "aws_vpc.Day2_YT_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "DAY2_YT_PUBRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-06e7bcf4a3b5a43df",
            "id": "r-rtb-08a983155facee4d61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08a983155facee4d6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Day2_YT_IG",
            "aws_route_table.Day2_YT_RT_IG",
            "aws_vpc.Day2_YT_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Day2_YT_RT_IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:route-table/rtb-08a983155facee4d6",
            "id": "rtb-08a983155facee4d6",
            "owner_id": "549395784991",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06e7bcf4a3b5a43df",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Day2_RT_IG"
            },
            "tags_all": {
              "Name": "Day2_RT_IG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0178061ce49ad9cb6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Day2_YT_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Day2_YT_RT_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:route-table/rtb-081a2ab38927c51eb",
            "id": "rtb-081a2ab38927c51eb",
            "owner_id": "549395784991",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Day2_RT_NAT"
            },
            "tags_all": {
              "Name": "Day2_RT_NAT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0178061ce49ad9cb6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Day2_YT_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Adding_to_YT_Day2_PRIS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0906667b38a60dd79",
            "route_table_id": "rtb-081a2ab38927c51eb",
            "subnet_id": "subnet-013c8796ae060fd57"
          },
          "dependencies": [
            "aws_route_table.Day2_YT_RT_NAT",
            "aws_subnet.Day2_YT_PRIS",
            "aws_vpc.Day2_YT_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Adding_to_YT_Day2_PUBS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085d3515be2f66929",
            "route_table_id": "rtb-08a983155facee4d6",
            "subnet_id": "subnet-0d6e7362aef7dc82f"
          },
          "dependencies": [
            "aws_route_table.Day2_YT_RT_IG",
            "aws_subnet.Day2_YT_PUBS",
            "aws_vpc.Day2_YT_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Day2_YT_SG_SSH_BH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:security-group/sg-06f4111c19b7aafc1",
            "description": "Allow ssh to bastion host as it is in Public subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f4111c19b7aafc1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Allow ssh",
            "name_prefix": "",
            "owner_id": "549395784991",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0178061ce49ad9cb6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Day2_YT_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Day2_YT_PRIS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:subnet/subnet-013c8796ae060fd57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013c8796ae060fd57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "549395784991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Day2_PRIS"
            },
            "tags_all": {
              "Name": "Day2_PRIS"
            },
            "vpc_id": "vpc-0178061ce49ad9cb6"
          },
          "dependencies": [
            "aws_vpc.Day2_YT_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Day2_YT_PUBS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:subnet/subnet-0d6e7362aef7dc82f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6e7362aef7dc82f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "549395784991",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Day2_PUBS"
            },
            "tags_all": {
              "Name": "Day2_PUBS"
            },
            "vpc_id": "vpc-0178061ce49ad9cb6"
          },
          "dependencies": [
            "aws_vpc.Day2_YT_VPC",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Day2_YT_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:549395784991:vpc/vpc-0178061ce49ad9cb6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0b5d2d702d21abdf5",
            "default_route_table_id": "rtb-0c1445d13a4aaa0ce",
            "default_security_group_id": "sg-03e176f0a29573aef",
            "dhcp_options_id": "dopt-013306c3265fdedcc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0178061ce49ad9cb6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c1445d13a4aaa0ce",
            "owner_id": "549395784991",
            "tags": {
              "Name": "Day2_VPC"
            },
            "tags_all": {
              "Name": "Day2_VPC"
            }
          }
        }
      ]
    }
  ]
}